# filtro-do-lula

./: pyproject.toml
filtro_do_lula/: __init__.py
